--- a/css/main.css
+++ b/css/main.css
@@ -1,18 +1,23 @@
 .menu-btn {
   position: absolute;
-  z-index: 3;
+  z-index: 10;
   right: 35px;
   top: 35px;
   cursor: pointer;
   transition: all 0.5s ease-out;
 }
 
+.menu-container{
+  z-index: 10;
+
+}
 .menu-btn .btn-line {
   width: 28px;
   height: 3px;
   margin: 0 0 5px 0;
   background: #fff;
   transition: all 0.5s ease-out;
+  z-index: 100;
 }
 
 .menu-btn.close {
@@ -35,13 +40,14 @@
   position: fixed;
   top: 0;
   width: 100%;
-  opacity: 0.9;
+  z-index: 100;
   visibility: hidden;
 }
 
 .menu.show {
   visibility: visible;
 }
+
 /*ZZZZZZZZZZZZZZZZZZZZZZZ index*/
 
 .menu-branding,
@@ -54,7 +60,7 @@
   width: 50%;
   height: 100vh;
   overflow: hidden;
-  opacity:3;
+  opacity: 1;
 }
 
 .menu-nav {
@@ -195,7 +201,6 @@ a {
 
 header {
   position: fixed;
-  z-index: 2;
   width: 100%;
 }
 
@@ -270,12 +275,13 @@ main#home h1 {
   display: grid;
   grid-gap: 0.7rem;
   grid-template-columns: repeat(3, 1fr);
+  position: relative;
 }
 
 .projects img {
   width: 100%;
   border: 3px #fff solid;
-  box-shadow:0 0 16px rgba(0,0,0,0.5);
+  box-shadow: 0 0 16px rgba(0, 0, 0, 0.5);
 
 }
 
@@ -283,7 +289,7 @@ main#home h1 {
   opacity: 0.3;
   border-color: #33c4e8;
   transition: all 0.3s ease-out;
-  
+
 }
 
 .boxes {
@@ -300,7 +306,7 @@ main#home h1 {
   padding: 1.5rem 2.5rem;
   margin-bottom: 3rem;
   transition: all 0.5s ease-out;
-  box-shadow:0 0 16px rgba(0,0,0,0.5);
+  box-shadow: 0 0 16px rgba(0, 0, 0, 0.5);
 
 }
 
@@ -431,40 +437,41 @@ main#home h1 {
 
 
 
-.onClickTextOverImage{
-  width:300px;
-  height:200px;
-  background-size:cover;
-  display:inline-block;
-  margin:4px;
-  border-radius:16px;
-  box-shadow:0 0 16px rgba(0,0,0,0.5);
-  position:relative;
+.onClickTextOverImage {
+  width: 300px;
+  height: 200px;
+  background-size: cover;
+  display: inline-block;
+  margin: 4px;
+  border-radius: 16px;
+  box-shadow: 0 0 16px rgba(0, 0, 0, 0.5);
+  position: relative;
 }
 
-.onClickTextOverImage *{
-  position:absolute;
-  top:0;
-  bottom:0;
-  left:0;
-  right:0;
-  z-index:2;
+.onClickTextOverImage * {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 2;
 }
 
-.onClickTextOverImage div{
-  z-index:1;
-  color:#fff;
-  text-align:center;
-  padding:8px;
-  padding-top:35%;
-  background-color:rgba(0,0,0,0.5);/* Used if the image is unavailable */
- 
-  border-radius:16px;
-  opacity:0;
-  transition:.3s;
+.onClickTextOverImage div {
+  z-index: 1;
+  color: #fff;
+  text-align: center;
+  padding: 8px;
+  padding-top: 35%;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 16px;
+  opacity: 0;
+  transition: .3s;
 }
-.onClickTextOverImage div:target{
-  opacity:1;  
+
+.onClickTextOverImage:hover div {
+  /* only apply hover styling when the div does not have the class 'no-hover' */
+  opacity: 1;
   padding: center;
-  z-index:3;
+  z-index: 2;
 }
